Fix organisation card overflowing

--- a/src/app/components/card_/card-organisation/card-organisation.component.css
+++ b/src/app/components/card_/card-organisation/card-organisation.component.css
@@ -1,6 +1,5 @@
 .organisation-card {
-  width: 110%;
-  margin-left: -10px;
+  width: 100%;
   background: #E5E5E5;
   border-color: #ADADAD;
   box-shadow: 0 3px 5px grey;
